--- a/frontend/src/assets/css/brooke.css
+++ b/frontend/src/assets/css/brooke.css
@@ -157,6 +157,11 @@ div.sidebar ul li:hover {
   margin-top: 10px;
 }
 
+/* .new-button {
+  position: fixed;
+  width: 20vh;
+} */
+
 
 /* Button Style */
 input[type="submit"] {
@@ -176,8 +181,8 @@ button, input[type="submit"] {
   font-size: 14px;
   letter-spacing: 0.5px;
 }
-
-button:hover, .nav-bar:hover, input[type="submit"]:hover {
+/* .nav-bar:hover, */
+button:hover,  input[type="submit"]:hover {
   background-image: linear-gradient(to right top, #8A2387, #E94057, #F27121);
   background-repeat: no-repeat;
 }
